# feature-store-api

./: .gitignore  3.1  3.2  3.4  3.5  3.7  3.9  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Jenkinsfile  Jenkinsfile_doc  README.md  auto_doc.py  bigquery.json  keyFile.json  latest  mkdocs.yml  requirements-docs.txt  setup.py  validations.json  versions.json
python/: .pre-commit-config.yaml  MANIFEST.in  failed.txt  pyproject.toml  setup.cfg  setup.py  test.py
python/hopsworks/: __init__.py  connection.py  feature.py  feature_group.py  feature_store.py  featurestore.py  storage_connector.py  tf_utils.py  training_dataset.py  util.py
python/hopsworks/client/: __init__.py  auth.py  aws.py  base.py  hopsworks.py
python/hopsworks/core/: client.py  core.py  feature_group.py  feature_group_api.py  feature_store_api.py  feed_model_engine.py  join.py  query.py  query_constructor_api.py  storage_connector_api.py  training_dataset_api.py  training_dataset_engine.py
python/hopsworks/engine/: __init__.py  hive.py  spark.py
python/hsfs/: __init__.py  builtin_transformations.py  code.py  connection.py  decorators.py  embedding.py  expectation.py  expectation_result.py  expectation_suite.py  feature.py  feature_descriptive_statistics.py  feature_group.py  feature_group_commit.py  feature_group_validation.py  feature_group_writer.py  feature_monitoring_config.py  feature_monitoring_result.py  feature_monitoring_window_config.py  feature_store.py  feature_view.py  ge_expectation.py  ge_validation_result.py  hopsworks_udf.py  on_demand_feature_group.py  partition_details.py  rule.py  ruledefinition.py  serving_key.py  split_statistics.py  statistics.py  statistics_config.py  storage_connector.py  tag.py  tf_utils.py  training_dataset.py  training_dataset_feature.py  training_dataset_split.py  training_dataset_wizard.py  transformation_function.py  transformation_function_attached.py  (+8 more)
python/hsfs/client/: __init__.py  auth.py  aws.py  base.py  exceptions.py  external.py  hopsworks.py  online_store_rest_client.py  rondb_rest_client.py  tag.py
python/hsfs/constructor/: external_feature_group_alias.py  external_group_alias.py  filter.py  fs_query.py  hudi_feature_group_alias.py  join.py  join_suggestion.py  on_demand_feature_group_alias.py  prepared_statement_parameter.py  query.py  serving_prepared_statement.py
python/hsfs/core/: __init__.py  arrow_flight_client.py  async_kafka.py  builtin_transformation_function.py  code_api.py  code_engine.py  constants.py  data_validation_engine.py  dataset_api.py  delta_engine.py  deltastreamer_jobconf.py  execution.py  expectation_api.py  expectation_engine.py  expectation_suite_api.py  expectation_suite_engine.py  expectations_api.py  expectations_engine.py  explicit_provenance.py  external_feature_group_engine.py  feature_descriptive_statistics.py  feature_group_api.py  feature_group_base.py  feature_group_base_engine.py  feature_group_engine.py  feature_group_internal_engine.py  feature_logging.py  feature_monitoring_config.py  feature_monitoring_config_api.py  feature_monitoring_config_engine.py  feature_monitoring_result.py  (+72 more)
python/tests/: conftest.py  pyproject.toml  test_builtin_transformation.py  test_code_engine.py  test_expectation_suite.py  test_expectation_suite_engine.py  test_external_feature_group_engine.py  test_feature.py  test_feature_group.py  test_feature_group_base_engine.py  test_feature_group_commit.py  test_feature_group_engine.py  test_feature_group_writer.py  test_feature_store.py  test_feature_view.py  test_feature_view_engine.py  test_ge_expectation.py  test_ge_validation_result.py  test_great_expectation_engine.py  test_hopswork_udf.py  test_hudi_engine.py  test_serving_keys.py  test_split_statistics.py  test_statistics.py  test_statistics_config.py  test_statistics_engine.py  test_storage_connector.py  test_tag.py  test_training_dataset.py  test_training_dataset_engine.py  test_training_dataset_feature.py  test_training_dataset_split.py  test_transformation_function.py  test_transformation_function_attached.py  test_transformation_function_engine.py  test_user.py  test_util.py  test_validation_report.py  test_validation_report_engine.py  util.py
(+19951 files in other folders)
