[project]
name = "hsfs"
dynamic = ["version"]
requires-python = ">=3.8,<3.13"
readme = "README.md"
description = "HSFS Python SDK to interact with Hopsworks Feature Store"
keywords = [
    "Hopsworks",
    "Feature Store",
    "hsfs",
    "Spark",
    "Machine Learning",
    "MLOps",
    "DataOps",
]
authors = [{ name = "Hopsworks AB", email = "robin@hopsworks.ai" }]
license = { text = "Apache-2.0" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
]

dependencies = [
    "pyhumps==1.6.1",
    "requests",
    "furl",
    "boto3",
    "pandas<2.2.0",
    "numpy<2",
    "pyjks",
    "mock",
    "avro==1.11.3",
    "sqlalchemy",
    "PyMySQL[rsa]",
    "tzlocal",
    "fsspec",
    "retrying",
    "hopsworks_aiomysql[sa]==0.2.1",
    "polars>=0.20.18,<=0.21.0",
    "opensearch-py>=1.1.0,<=2.4.2",
]

[project.optional-dependencies]
python = [
    "pyarrow>=10.0",
    "confluent-kafka<=2.3.0",
    "fastavro>=1.4.11,<=1.8.4",
    "tqdm",
]
great-expectations = ["great_expectations==0.18.12"]
dev-no-opt = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "ruff",
    "pyspark==3.1.1",
    "moto[s3]==5.0.0",
    "typeguard==4.2.1",
]
dev-pandas1 = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "ruff",
    "pyspark==3.1.1",
    "moto[s3]==5.0.0",
    "pandas<=1.5.3",
    "sqlalchemy<=1.4.48",
]
dev = ["hsfs[dev-no-opt]", "hsfs[great-expectations]"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]
include = ["../Readme.md", "../LICENSE", "hsfs", "hsfs.*"]

[tool.setuptools.dynamic]
version = { attr = "hsfs.version.__version__" }

[project.urls]
Documentation = "https://docs.hopsworks.ai/latest"
Repository = "https://github.com/logicalclocks/feature-store-api"
Homepage = "https://www.hopsworks.ai"
Community = "https://community.hopsworks.ai"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "java"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8+ syntax.
target-version = "py38"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I", "W"] #, "ANN"]
ignore = [
    "B905",   # zip has no strict kwarg until Python 3.10
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN003", # Missing type annotation for **kwarg in function
    "ANN002", # Missing type annotation for *args in function
    "ANN401", # Allow Any in type annotations
    "W505",   # Doc line too long
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["hopsworks", "hsfs", "hsml"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
